--- a/pages/politics-news/politics1.html
+++ b/pages/politics-news/politics1.html
@@ -37,7 +37,7 @@
         <div class="row">
           
           <div class="col-sm-8">
-            <sports-component news-index="0"></sports-component>
+            <politics-component news-index="0"></politics-component>
           </div>
 
           <div class="col-sm-4">
@@ -53,7 +53,7 @@
     <script src="../../components/navbar.js"></script>
     <script src="../../components/cards.js"></script>
     <script src="../../components/small-card-slides.js"></script>
-    <script src="../../components/news-components/sport1.js"></script>
+    <script src="../../components/news-components/politics-news.js"></script>
     <!-- the  script card slider -->
     <script src="../../components/news-components/sport-news.js"></script>
     <script src="../../components/Breaking-news.js"></script>
