add dropdown to menu

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
    <link rel="stylesheet" href="css/styles.css">
    <link rel="stylesheet" href="css/nabvar.css">
+   <link rel="stylesheet" href="css/dropdown.css">
    <link rel="stylesheet" href="css/breaking-news.css">
    <link rel="stylesheet" href="css/header.css">
    <link rel="stylesheet" href="css/about-header.css">
@@ -40,6 +41,7 @@
      <!-- Use the custom components-->
      <nav>
       <navbar-component></navbar-component>
+      <dropdown-component></dropdown-component>
      </nav>
      <header>
         <about-header></about-header>
@@ -61,6 +63,7 @@
      
     <script src="js/scripts.js"></script>
     <script src="components/navbar.js"></script>
+    <script src="components/dropdown.js"></script>
     <script src="components/header.js"></script>
     <script src="components/About-components/about-header.js"></script>
    
