add the social buttons and expand the text in the news

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
    
+   <!--Social bottoms-->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="css/social-bottoms.css">
 
    <link rel="stylesheet" href="css/styles.css">
    <link rel="stylesheet" href="css/nabvar.css">
@@ -45,7 +48,7 @@
      </nav>
      <header>
         <about-header></about-header>
-        <header-component></header-component>
+        <header-component></header-component>      
      </header>
 
      <section style="margin-top: 6%;">
@@ -76,6 +79,9 @@
     <script src="components/sport-section.js"></script>
     <script src="components/slide-card.js"></script>
     <script src="components/footer.js"></script>
+
+    <!--social bottoms components-->
+    <script src="components/social-bottoms.js"></script>
     
     <!-- jQuery ( complete version) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
