--- a/pages/about.html
+++ b/pages/about.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/nabvar.css">
     <link rel="stylesheet" href="../css/about-header.css">
+    <link rel="stylesheet" href="../css/the-office.css">
     <link rel="stylesheet" href="../css/time-line.css">
     <link rel="stylesheet" href="../css/cards-journalist.css">
     
@@ -42,6 +43,7 @@
      </header>
     
      <section>
+        <the-office-component></the-office-component>
         <!--time line "the global News"-->
         <div class="info">
             <div id="tribute-info">
@@ -61,6 +63,7 @@
     <script src="../js/scripts.js"></script>
     <script src="../components/About-components/about-header.js"></script>
     <script src="../components/navbar.js"></script>
+    <script src="../components/About-components/the-office.js"></script>
     <script src="../components/About-components/time-line.js"></script>
     <script src="../components/About-components/cards-journalist.js"></script>
     <script src="../components/footer.js"></script>
