add the social buttoms

--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
    
-   <!--Social bottoms-->
+   <!--Social bottoms css-->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   <link rel="stylesheet" href="css/social-bottoms.css">
-
-   <link rel="stylesheet" href="css/styles.css">
+   <link rel="stylesheet" href="css/social-buttoms.css">
+   
+   <!--header components css-->
    <link rel="stylesheet" href="css/nabvar.css">
    <link rel="stylesheet" href="css/dropdown.css">
+   
+   <!--body css-->
+   <link rel="stylesheet" href="css/styles.css">
+   
+   <!--section components css-->
    <link rel="stylesheet" href="css/breaking-news.css">
    <link rel="stylesheet" href="css/header.css">
    <link rel="stylesheet" href="css/about-header.css">
@@ -37,8 +42,10 @@
    <link rel="stylesheet" href="css/cards.css">
    <link rel="stylesheet" href="css/Weather.css">
    <link rel="stylesheet" href="css/slides-card.css">
+
+   <!--footer css-->
    <link rel="stylesheet" href="css/footer.css">
-   <title>My Project</title>
+   <title>The Global News</title>
 </head>
 <body>
      <!-- Use the custom components-->
@@ -47,8 +54,8 @@
       <dropdown-component></dropdown-component>
      </nav>
      <header>
-        <about-header></about-header>
-        <header-component></header-component>      
+      <about-header></about-header>
+      <header-component></header-component>      
      </header>
 
      <section style="margin-top: 6%;">
@@ -69,9 +76,11 @@
     <script src="components/dropdown.js"></script>
     <script src="components/header.js"></script>
     <script src="components/About-components/about-header.js"></script>
+
+    <!--social bottoms components-->
+    <script src="components/social-buttoms.js"></script>
    
     <!-- the  script card slider -->
-    
     <script src="components/Breaking-news.js"></script>
     <script src="components/politics-section.js"></script>
     <script src="components/business-section.js"></script>
@@ -79,9 +88,6 @@
     <script src="components/sport-section.js"></script>
     <script src="components/slide-card.js"></script>
     <script src="components/footer.js"></script>
-
-    <!--social bottoms components-->
-    <script src="components/social-bottoms.js"></script>
     
     <!-- jQuery ( complete version) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
