--- a/pages/tech-news/tech2.html
+++ b/pages/tech-news/tech2.html
@@ -21,8 +21,11 @@
 
   <!-- OwlCarousel CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+
+  <!--Social bottoms css-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../../css/social-buttoms.css">
   
   <link rel="stylesheet" href="../../css/nabvar.css">
   <link rel="stylesheet" href="../../css/breaking-news.css">
@@ -62,6 +65,9 @@
     </div>
   </div>
   <footer-component></footer-component>
+
+  <!--social bottoms components-->
+  <script src="../../components/social-buttoms.js"></script>
 
   <script src="../../js/scripts.js"></script>
   <script src="../../components/navbar.js"></script>
