--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,10 @@
    <!--CSS link weather-->
    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200..800&display=swap" rel="stylesheet">
 
+   <!--Social bottoms css-->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="../css/social-buttoms.css">
+
    <!--w3school link and script-->
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
@@ -59,6 +63,10 @@
      <footer>
         <footer-component></footer-component>
      </footer>
+
+      <!--social bottoms components-->
+    <script src="../components/social-buttoms.js"></script>
+
      
     <script src="../js/scripts.js"></script>
     <script src="../components/About-components/about-header.js"></script>
