--- a/pages/business-news/business1.html
+++ b/pages/business-news/business1.html
@@ -8,6 +8,10 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+   <!--Social bottoms css-->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="../../css/social-buttoms.css">
    
    <!--bootstrap link and script-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -55,6 +59,9 @@
         </div>
       </div>
     <footer-component></footer-component>
+
+    <!--social bottoms components-->
+    <script src="../../components/social-buttoms.js"></script>
 
     <script src="../../js/scripts.js"></script>
     <script src="../../components/navbar.js"></script>
