--- a/pages/business-news/business2.html
+++ b/pages/business-news/business2.html
@@ -23,6 +23,10 @@
     <link rel="stylesheet" href="../../css/cards-sliders.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+
+    <!--Social bottoms css-->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="../../css/social-buttoms.css">
     
     <link rel="stylesheet" href="../../css/breaking-news.css">
     <link rel="stylesheet" href="../../css/the-news.css">
@@ -55,6 +59,9 @@
         </div>
       </div>
     <footer-component></footer-component>
+
+    <!--social bottoms components-->
+    <script src="../../components/social-buttoms.js"></script>
 
     <script src="../../js/scripts.js"></script>
     <script src="../../components/navbar.js"></script>
