--- a/pages/tech-news/tech1.html
+++ b/pages/tech-news/tech1.html
@@ -16,7 +16,11 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <link rel="stylesheet" href="../../css/styles.css">s
+  <!--Social bottoms css-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../../css/social-buttoms.css">
+
+  <link rel="stylesheet" href="../../css/styles.css">
   <link rel="stylesheet" href="../../css/about-header.css">
 
   <!-- OwlCarousel CSS -->
@@ -62,6 +66,9 @@
     </div>
   </div>
   <footer-component></footer-component>
+
+  <!--social bottoms components-->
+  <script src="../../components/social-buttoms.js"></script>
 
   <script src="../../js/scripts.js"></script>
   <script src="../../components/navbar.js"></script>
