resposive in ipad and smartphone

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
       <header-component></header-component>      
      </header>
 
-     <section style="margin-top: 6%;">
-        <Breakingnews-component></Breakingnews-component>
+     <section  class="section-index">
         <politics-component id="politicsNews"></politics-component>
         <business-component id="businessNews"></business-component>
         <tech-component id="techNews"></tech-component>
         <sport-component id="sportsSection"></sport-component>
         <cardslides-component style="margin-top: 10%;"></cardslides-component>
+        <Breakingnews-component></Breakingnews-component>
      </section>
       
      <footer>
@@ -72,6 +72,7 @@
      </footer>
      
     <script src="js/scripts.js"></script>
+    <script src="components/date.js"></script>
     <script src="components/navbar.js"></script>
     <script src="components/dropdown.js"></script>
     <script src="components/header.js"></script>
