--- a/pages/sports-news/sport1.html
+++ b/pages/sports-news/sport1.html
@@ -53,7 +53,6 @@
           </div>
 
           <div class="col-sm-4">
-            <smallslider-component></smallslider-component>
             <mix-card-component></mix-card-component>
           </div>
           <Breakingnews-component style="margin-top: 39rem;"></Breakingnews-component>
@@ -65,6 +64,7 @@
     <script src="../../components/social-buttoms.js"></script>
 
     <script src="../../js/scripts.js"></script>
+    <script src="../../components/date.js"></script>
     <script src="../../components/navbar.js"></script>
     <script src="../../components/About-components/about-header.js"></script>
     <script src="../../components/cards.js"></script>
