--- a/pages/sports-news/sport3.html
+++ b/pages/sports-news/sport3.html
@@ -65,6 +65,7 @@
     <script src="../../components/social-buttoms.js"></script>
 
     <script src="../../js/scripts.js"></script>
+    <script src="../../components/date.js"></script>
     <script src="../../components/navbar.js"></script>
     <script src="../../components/About-components/about-header.js"></script>
     <script src="../../components/cards.js"></script>
