--- a/pages/tech-news/tech1.html
+++ b/pages/tech-news/tech1.html
@@ -38,7 +38,7 @@
   <link rel="stylesheet" href="../../css/lateral-slide.css">
   <!---->
 
-  <title>Global News</title>
+  <title>The Global News</title>
 </head>
 
 <body>
@@ -71,6 +71,7 @@
   <script src="../../components/social-buttoms.js"></script>
 
   <script src="../../js/scripts.js"></script>
+  <script src="../../components/date.js"></script>
   <script src="../../components/navbar.js"></script>
   <script src="../../components/About-components/about-header.js"></script>
   <script src="../../components/cards.js"></script>
