add screenshots and the README.md

--- a/pages/about.html
+++ b/pages/about.html
@@ -34,8 +34,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     
     <link rel="stylesheet" href="../css/footer.css">
-    <title>My Project</title>
 </head>
+<title>The Global News</title>
 <body>
      <!-- Use the custom components-->
      <nav>
