--- a/pages/business-news/business1.html
+++ b/pages/business-news/business1.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="../../css/styles.css">
     <link rel="stylesheet" href="../../css/nabvar.css">
     <link rel="stylesheet" href="../../css/about-header.css">
+
+    <!--weather css-->
+    <link rel="stylesheet" href="../../css/Weather.css">
     
     <!-- OwlCarousel CSS -->
     <link rel="stylesheet" href="../../css/cards-sliders.css">
@@ -33,7 +36,7 @@
     <link rel="stylesheet" href="../../css/cards.css">
     <link rel="stylesheet" href="../../css/footer.css">
 
-    <title>Global News</title>
+    <title>The Global News</title>
 </head>
 <body>
     <!-- Use the custom components-->
@@ -61,6 +64,8 @@
 
     <!--social bottoms components-->
     <script src="../../components/social-buttoms.js"></script>
+    <!--weather component-->
+    <script src="../../components/weather.js"></script>
 
     <script src="../../js/scripts.js"></script>
     <script src="../../components/date.js"></script>
