--- a/pages/business-news/business2.html
+++ b/pages/business-news/business2.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="../../css/cards.css">
     <link rel="stylesheet" href="../../css/footer.css">
 
-    <title>Global News</title>
+    <title>The Global News</title>
 </head>
 <body>
     <!-- Use the custom components-->
@@ -52,7 +52,6 @@
           </div>
 
           <div class="col-sm-4">
-            <smallslider-component></smallslider-component>
             <mix-card-component></mix-card-component>
           </div>
           <Breakingnews-component style="margin-top: 39rem;"></Breakingnews-component>
