--- a/pages/success/subscription.html
+++ b/pages/success/subscription.html
@@ -35,7 +35,7 @@
 
     <link rel="stylesheet" href="../../css/slides-card.css">
 
-    <title>Global News</title>
+    <title>The Global News</title>
 </head>
 <body>
     <!-- Use the custom components-->
