--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     
     <link rel="stylesheet" href="../css/footer.css">
-    <title>My Project</title>
+    <title>The Global News</title>
 </head>
 <body>
      <!-- Use the custom components-->
