--- a/pages/success/send-contact.html
+++ b/pages/success/send-contact.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="../../css/cards.css">
     <link rel="stylesheet" href="../../css/footer.css">
 
-    <title>Global News</title>
+    <title>The Global News</title>
 </head>
 <body>
     <!-- Use the custom components-->
