--- a/pages/tech-news/tech3.html
+++ b/pages/tech-news/tech3.html
@@ -37,7 +37,7 @@
   <link rel="stylesheet" href="../../css/lateral-slide.css">
   <!---->
 
-  <title>Global News</title>
+  <title>The Global News</title>
 </head>
 
 <body>
