add testing extra documentation

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -47,11 +47,11 @@
         <about-header></about-header>
      </header>
     
-     <section>
+     <main>
          <!--form contact "the global News"-->
          <div id="contact-section"></div>  
          <!--End of the form contact-->    
-     </section>
+     </main>
      
      <footer>
         <footer-component></footer-component>
