--- a/pages/about.html
+++ b/pages/about.html
@@ -22,6 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     
+    <!-- css -->
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/nabvar.css">
     <link rel="stylesheet" href="../css/about-header.css">
